# desk-panel-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  message_service.py  weather_service.py
web/: index.html  manage.html  site.webmanifest  sw.js
