[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "pillow>=11.0.0",
    "pillow-heif>=0.22.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.46.0",
    "python-socketio>=5.13.0",
]
